--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <nav>
           <div class="option active"><a href="./index.html">Home</a></div>
-          <div class="option"><a href="../page-2/index.html">about us</a></div>
+          <div class="option"><a href="./page-2/index.html">about us</a></div>
           <div class="option"><a href="#">features</a></div>
           <div class="option"><a href="#">pricing</a></div>
           <div class="option"><a href="#">FAQ</a></div>
@@ -621,15 +621,15 @@
 
     <!-- FAQ -->
     <div
-      class="FAQ md:w-[1283.31px] md:h-[537px] md:mx-[158px] md:flex md:gap-[109px] md:justify-between"
+      class="FAQ md:w-[80%] md:h-[537px] md:mx-[5%] md:flex md:gap-[20%] md:justify-between"
     >
-      <div class="title md:w-[328px] md: h-[160px] w-[100%]">
+      <div class="title  md:h-[160px] w-[100%]">
         <h3
-          class="h3 font-[poppins] md:ml-[160px] mt-[28px] mb-[28px] ml-2 text-nowrap font-bold text-3xl"
+          class="h3 font-[poppins] md:ml-[20%] mt-[28px] mb-[28px] ml-2 text-nowrap font-bold text-3xl"
         >
           Frequently asked questions
         </h3>
-        <span class="span md:ml-[160px] ml-2 text-nowrap"
+        <span class="span md:ml-[5%] ml-2 text-nowrap"
           >Contact us for more info</span
         >
       </div>
@@ -744,19 +744,19 @@
 
     <!-- contact-form -->
     <div
-      class="contact-form md:w-[1280px] w-[100%] md:h-[691px] ml-auto mt-[128px] mb-[128px] flex"
+      class="contact-form md:w-[100%] w-[100%] md:h-[] ml-auto mt-[8%] mb-[128px] flex"
     >
       <div
-        class="picture bg-[url('/images/contact-form.jpg')] bg-center w-[50%] i"
+        class="picture bg-[url('/images/contact-form.jpg')] bg-center w-[50%] "
       >
         <div class="cover bg-[#1C1E5380]/50 h-[100%] pt-[96px]">
           <h1
-            class="h1 text-[#FFFFFF] font-[poppins] md:w-[464px] md:ml-[96px] ml-[5px] mb-[24px] font-semibold text-6xl"
+            class="h1 text-[#FFFFFF] font-[poppins] md:w-[78%] md:ml-[96px] ml-[5px] mb-[24px] font-semibold text-6xl"
           >
             Building stellar websites for early startups
           </h1>
           <p
-            class="p md:w-[464px] text-[#FFFFFF] font-[poppins] font-medium md:ml-[96px] ml-[5px] "
+            class="p md:w-[90%] text-[#FFFFFF] font-[poppins] font-medium md:ml-[4%] ml-[5px] "
           >
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua ut enim.
@@ -764,11 +764,11 @@
         </div>
       </div>
       <div class="form bg-[#1C1E53] w-[50%] h-[100%] md:p-[96px] p-[15px] box-border">
-        <h5 class="h5 text-[#FFFFFF] text-[32px] font-normal md:w-[432px]">
+        <h5 class="h5 text-[#FFFFFF] text-[32px] font-normal md:w-[27%]">
           Send inquiry
         </h5>
         <p
-          class="p text-[#F4F6FC] md:w-[432px] font-[poppins] font-medium md:text-[16px] mt-[16px]"
+          class="p text-[#F4F6FC] md:w-[70%] font-[poppins] font-medium md:text-[16px] mt-[16px]"
         >
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore.
@@ -780,7 +780,7 @@
           name="yourName"
           id="Name"
           placeholder="Your Name"
-          class="place p-[32px] bg-transparent rounded-xl md:w-[432px] h-[64px] placeholder-opacity-25 mt-[28px] outline-none border border-[#FFFFFF]/50"
+          class="place p-[32px] bg-transparent rounded-xl md:w-[78%] h-[64px] placeholder-opacity-25 mt-[28px] outline-none border border-[#FFFFFF]/50"
         />
         <label for="Email"></label>
         <input
@@ -788,7 +788,7 @@
           name="Email"
           id="Email"
           placeholder="Your Email"
-          class="place p-[32px] bg-transparent rounded-xl md:w-[432px] h-[64px] placeholder-opacity-25 mt-[28px] outline-none border border-[#FFFFFF]/50"
+          class="place p-[32px] bg-transparent rounded-xl md:w-[78%] h-[64px] placeholder-opacity-25 mt-[28px] outline-none border border-[#FFFFFF]/50"
         />
         <label for="figma"></label>
         <input
@@ -796,15 +796,15 @@
           name="yourFigma"
           id="figma"
           placeholder="Paste your Figma design URL"
-          class="place p-[32px] bg-transparent rounded-xl md:w-[432px] h-[64px] placeholder-opacity-25 mt-[28px] outline-none border border-[#FFFFFF]/50"
+          class=" place p-[32px] bg-transparent rounded-xl md:w-[78%] h-[64px] placeholder-opacity-25 mt-[28px] outline-none border border-[#FFFFFF]/50 "
         />
         <button
-          class="btn mt-[39px] rounded-full md:w-[432px] w-[70%] md:h-[64px] h-[30%] bg-[#FCD980] font-[Manrope] p-[15px] font-bold text-[#1B1C2B]"
+          class="btn mt-[39px] rounded-full md:w-[90%] w-[70%] md:h-[64px] h-[30%] bg-[#FCD980] font-[Manrope] p-[15px] font-bold text-[#1B1C2B]"
         >
           Send an Inquiry
         </button>
         <span
-          class="span font-[poppins] font-medium text-[#FFFFFF] w-[244px] mt-[28px] inline-block"
+          class="span font-[poppins] font-medium text-[#FFFFFF] w-fit mt-[28px] inline-block"
           > <a href="#"> Get in touch with us 
           <svg 
           class=" inline-block ml-[15px]"
@@ -825,11 +825,11 @@
     </div>
     <!-- end contact-form -->
     <!-- blog -->
-    <div class="blog md:w-[1280px] w-[100%] md:h-[737px] w-[100%] h-auto  md:ml-[160px] ml-[5px]">
+    <div class="blog md:w-[80%] w-[100%] md:h-[737px] w-[100%] h-auto  md:ml-[160px] ml-[5px]">
       
-      <div class="page md:w-[405px] w-[100%] md:h-[285px] object-cover   ">
+      <div class="page w-[100%] md:h-[285px] object-cover   ">
         <div class="top">
-        <img src="./images/our -blog/man.png" alt="" class="img md:w-[100%] w-[100%]  ">
+        <img src="./images/our -blog/man.png" alt="" class="img w-[100%]  ">
         <span class="span text-[#282938] opacity-[70%] ">19 Jan 2022</span>
         <h6 class=" font-[poppins] font-normal mt-[16px] md:text-[24px] text-[#282938] "> <a href="#"> How one Webflow user grew his single person consultancy from $0-100K in 14 months</a></h6></div>
         <div class="bottom">
@@ -844,7 +844,7 @@
       </div>
 
       </div>
-      <div class="page md:w-[405px] w-[100%] md:h-[285px] object-cover   ">
+      <div class="page  w-[100%] md:h-[285px] object-cover   ">
         <div class="top">
         <img src="./images/our -blog/woman.png" alt="" class="img md:w-[100%] w-[100%]  ">
         <span class="span text-[#282938] opacity-[70%] ">19 Jan 2022</span>
@@ -861,7 +861,7 @@
       </div>
 
       </div>
-      <div class="page md:w-[405px] w-[100%] md:h-[285px] object-cover   ">
+      <div class="page w-[100%] md:h-[285px] object-cover   ">
         <div class="top">
         <img src="./images/our -blog/computer.png" alt="" class="img md:w-[100%] w-[100%]  ">
         <span class="span text-[#282938] opacity-[70%] ">19 Jan 2022</span>
