--- a/page-2/index.html
+++ b/page-2/index.html
@@ -42,17 +42,21 @@
       <div class="navbar">
         <div class="logo">
           <img src="./images/Logo.svg" alt="" />
+         </div>
           <div class="menu">
             <div class="option active"><a href="../index.html">Home</a></div>
-            <div class="option"><a href="../page-2/index.html">about us</a></div>
+            <div class="option">
+              <a href="../page-2/index.html">about us</a>
+            </div>
             <div class="option"><a href="#">features</a></div>
             <div class="option"><a href="#">pricing</a></div>
             <div class="option"><a href="#">FAQ</a></div>
             <div class="option"><a href="../page-3/index.html">blog</a></div>
-            <div class="option btn"><button><a href="../page-4/index.html">contact us</a></button></div>
+            <div class="option btn">
+              <button><a href="../page-4/index.html">contact us</a></button>
+            </div>
           </div>
         </div>
-      </div>
 
       <div class="hero">
         <div class="content">
@@ -137,9 +141,15 @@
           <img src="./images/a-man-standing-in-an-office-7792811.png" alt="" />
         </div>
         <div class="vision">
+          <img
+            src="./images/photo-of-women-at-the-meeting-3810789.png"
+            alt=""
+          />
           <div class="content">
             <span>our vision</span>
+
             <h3>Laser focus</h3>
+
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -147,10 +157,6 @@
               nisi ut aliquip ex ea commodo consequat.
             </p>
           </div>
-          <img
-            src="./images/photo-of-women-at-the-meeting-3810789.png"
-            alt=""
-          />
         </div>
       </div>
       <!-- end mission -->
