--- a/page-3/index.html
+++ b/page-3/index.html
@@ -39,8 +39,7 @@
   <body>
     <!-- wrapper -->
     <div class="wrapper">
-     
-        <!-- <nav class="w-[100%] md:bg-[#1C1E53] flex gap-x-[32px]  ">
+      <!-- <nav class="w-[100%] md:bg-[#1C1E53] flex gap-x-[32px]  ">
           <div class="logo">
             <img src="./images/Logo.svg" alt="" class="img w-[122px] mx-[160px] mt-[33px]"/>
             <div class="menu w-[] bg-black flex gap-x-[32px] mx-[734px]  mb-[35px]  	">
@@ -58,79 +57,150 @@
       <div class="navbar">
         <div class="logo">
           <img src="./images/Logo.svg" alt="" />
+        </div>
+
           <div class="menu">
             <div class="option active"><a href="../index.html">Home</a></div>
-            <div class="option"><a href="../page-2/index.html">about us</a></div>
+            <div class="option">
+              <a href="../page-2/index.html">about us</a>
+            </div>
             <div class="option"><a href="#">features</a></div>
             <div class="option"><a href="#">pricing</a></div>
             <div class="option"><a href="#">FAQ</a></div>
-            <div class="option"><a href="../page-3/index.html">blog</a></div>
-            <div class="option btn"><button><a href="../page-4/index.html">contact us</a></button></div>
+            <div class="option"><a href="./index.html">blog</a></div>
+            <div class="option btn">
+              <button><a href="../page-4/index.html">contact us</a></button>
+            </div>
           </div>
-        </div>
       </div>
       <!-- heading -->
-      <div class="heading text-center ">
-        <h2 class=" font-[poppins] font-semibold text-[48px] text-[#282938] text-center md:w-[949px] w-fit mt-[128px] md:ml-[326px]">A UX Case Study on Creating a Studious Environment for Students</h2>
-        <span class=" mt-[16px] text-center ">Andrew Jonson</span>
+      <div class="heading text-center">
+        <h2
+          class="font-[poppins] font-semibold text-[48px] text-[#282938] text-center md:w-[78%] w-fit mt-[128px] md:ml-[5%]"
+        >
+          A UX Case Study on Creating a Studious Environment for Students
+        </h2>
+        <span class="mt-[16px] text-center">Andrew Jonson</span>
         <span>Posted on 27th January 2021</span>
-        <img src="./images/together.jpg" alt="" class=" w-[80%] md:ml-[160px] md:h-[477px] object-cover mt-[48px]">
+        <img
+          src="./images/together.jpg"
+          alt=""
+          class="w-[80%] md:ml-[10%] md:h-[477px] object-cover mt-[48px]"
+        />
       </div>
       <!-- end heading -->
       <!-- text -->
-      <div class="text  md:pl-[379px] pl-[40px]">
-        <h3 class=" font-[Poppins] font-semibold text-[38px] text-[#282938] md:w-[840px] mt-[80px] w-fit">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+      <div class="text md:pl-[20%] pl-[40px]">
+        <h3
+          class="font-[Poppins] font-semibold text-[38px] text-[#282938] md:w-[70%] mt-[80px] w-fit"
+        >
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
         </h3>
-        <p class=" mt-[32px] md:w-[840px] font-normal font-[poppins] text-[16px] text-[#282938] opacity-[70%] mb-[40px]">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <h3 class=" font-[Poppins] font-semibold text-[38px] text-[#282938] md:w-[840px] mt-[80px] w-fit">Ut enim ad minim veniam, quis nostrud.
+        <p
+          class="mt-[32px] md:w-[70%] font-normal font-[poppins] text-[16px] text-[#282938] opacity-[70%] mb-[40px]"
+        >
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+        <h3
+          class="font-[Poppins] font-semibold text-[38px] text-[#282938] md:w-[70%] mt-[80px] w-fit"
+        >
+          Ut enim ad minim veniam, quis nostrud.
         </h3>
-        <p class=" mt-[32px] md:w-[840px] font-normal font-[poppins] text-[16px] text-[#282938] opacity-[70%] mb-[40px]">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <img src="./images/hands.png" alt="" class=" w-[80%] md:h-[477px] object-cover mt-[48px]"/>
-        <h3 class=" font-[Poppins] font-semibold text-[38px] text-[#282938] md:w-[840px] mt-[80px] w-fit">Ut enim ad minim veniam, quis nostrud.
+        <p
+          class="mt-[32px] md:w-[70%] font-normal font-[poppins] text-[16px] text-[#282938] opacity-[70%] mb-[40px]"
+        >
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+        <img
+          src="./images/hands.png"
+          alt=""
+          class="w-[80%] md:h-[477px] object-cover mt-[48px]"
+        />
+        <h3
+          class="font-[Poppins] font-semibold text-[38px] text-[#282938] md:w-[70%] mt-[80px] w-fit"
+        >
+          Ut enim ad minim veniam, quis nostrud.
         </h3>
-        <p class=" mt-[32px] md:w-[840px] font-normal font-[poppins] text-[16px] text-[#282938] opacity-[70%] mb-[40px]">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p
+          class="mt-[32px] md:w-[70%] font-normal font-[poppins] text-[16px] text-[#282938] opacity-[70%] mb-[40px]"
+        >
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum.
+        </p>
       </div>
-     
+
       <!-- end text -->
 
       <!-- footer -->
-        <!-- footer -->
-        <footer>
-          <div class="content">
+      <!-- footer -->
+      <footer>
+        <div class="content">
+          <div class="left">
+            <img src="./images/Logo.svg" alt="" />
+            <p>
+              We are always open to discuss your project and improve your online
+              presence.
+            </p>
+          </div>
+          <div class="right">
+            <h2>Let's Talk</h2>
+            <p>
+              We are always open to discuss your project, improve your online
+              presence and help with your UX/UI design challenges.
+            </p>
+            <div class="social">
+              <img src="./images/footer/facebook.svg" alt="" />
+              <img src="./images/footer/twitter.svg" alt="" />
+              <img src="./images/footer/instagram.svg" alt="" />
+              <img src="./images/footer/linkedin.svg" alt="" />
+            </div>
+          </div>
+        </div>
+        <div class="contact">
+          <div class="info">
             <div class="left">
-              <img src="./images/Logo.svg" alt="" />
-              <p>
-                We are always open to discuss your project and improve your online
-                presence.
-              </p>
+              <div>Email me out</div>
+              <span>contact@website.com</span>
             </div>
             <div class="right">
-              <h2>Let's Talk</h2>
-              <p>
-                We are always open to discuss your project, improve your online
-                presence and help with your UX/UI design challenges.
-              </p>
-              <div class="social">
-                <img src="./images/footer/facebook.svg" alt="" />
-                <img src="./images/footer/twitter.svg" alt="" />
-                <img src="./images/footer/instagram.svg" alt="" />
-                <img src="./images/footer/linkedin.svg" alt="" />
-              </div>
+              <div>Call us</div>
+              <span>0927 6277 28525</span>
             </div>
           </div>
-          <div class="contact">
-            <div class="info">
-              <div class="left">
-                <div>Email me out</div>
-                <span>contact@website.com</span>
-              </div>
-              <div class="right">
-                <div>Call us</div>
-                <span>0927 6277 28525</span>
-              </div>
-            </div>
-          </div>
-        </footer>
+        </div>
+      </footer>
       <!-- end footer -->
     </div>
     <!-- end wrapper -->
