--- a/page-4/index.html
+++ b/page-4/index.html
@@ -43,20 +43,21 @@
       <div class="navbar">
         <div class="logo">
           <img src="./images/Logo.svg" alt="" />
-          <div class="menu">
-            <div class="option active">
-              <a href="../index.html">Home</a>
-            </div>
-            <div class="option">
-              <a href="../page-2/index.html">about us</a>
-            </div>
-            <div class="option"><a href="#">features</a></div>
-            <div class="option"><a href="#">pricing</a></div>
-            <div class="option"><a href="#">FAQ</a></div>
-            <div class="option"><a href="../page-3/index.html">blog</a></div>
-            <div class="option btn">
-              <button><a href="./index.html">contact us</a></button>
-            </div>
+        </div>
+
+        <div class="menu">
+          <div class="option active">
+            <a href="../index.html">Home</a>
+          </div>
+          <div class="option">
+            <a href="../page-2/index.html">about us</a>
+          </div>
+          <div class="option"><a href="#">features</a></div>
+          <div class="option"><a href="#">pricing</a></div>
+          <div class="option"><a href="#">FAQ</a></div>
+          <div class="option"><a href="../page-3/index.html">blog</a></div>
+          <div class="option btn">
+            <button><a href="./index.html">contact us</a></button>
           </div>
         </div>
       </div>
@@ -66,7 +67,7 @@
       >
         <h3>Contact Us</h3>
         <p
-          class="font-[poppins] text-[16px] text-[#282938] opacity-[0.7] md:w-[562px] m-auto mb-[64px]"
+          class="font-[poppins] text-[16px] text-[#282938] opacity-[0.7] md:w-[40%] m-auto mb-[64px]"
         >
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore.
@@ -77,7 +78,7 @@
 
       <!-- form -->
       <div
-        class="form md:w-[1061px] w-[80%] md:h-[640px] bg-[#F4F6FC] m-auto p-[77px] mb-[128px]"
+        class="form md:w-[70%] w-[80%] bg-[#F4F6FC] m-auto p-[77px] mb-[128px]"
       >
         <div class="forms">
           <div class="inputs">
@@ -87,7 +88,7 @@
               name="Name"
               id="Name"
               placeholder="Enter your name"
-              class="outline-none border border-[1px] border-[#0000001F]/12% md:h-[64px] pt-[18px]  pl-[32px] text-[16px] pb-[18px] font-normal placeholder-black rounded-xl gap-[10px]"
+              class="outline-none border border-[1px] border-[#0000001F]/12% md:h-[64px] pt-[18px] pl-[32px] text-[16px] pb-[18px] font-normal placeholder-black rounded-xl gap-[10px]"
             />
           </div>
           <div class="inputs">
